[NCITERM-750] Improve the Term Browser logging.